Fix images urls

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header class="header">
       <div class="container">
         <div class="header-logo">
-          <img class="header-logo__image" src="/images/logo.svg" width="250" height="102" alt="page logo" />
+          <img class="header-logo__image" src="./images/logo.svg" width="250" height="102" alt="page logo" />
         </div>
 
         <ul class="header-nav">
@@ -59,7 +59,7 @@
         <div class="mobile-menu">
           <div class="mobile-menu__header">
             <div class="header-logo">
-              <img class="header-logo__image" src="/images/logo.svg" width="250" height="102" alt="page logo" />
+              <img class="header-logo__image" src="./images/logo.svg" width="250" height="102" alt="page logo" />
             </div>
           </div>
           <ul class="header-nav">
@@ -127,8 +127,8 @@
         <h2 class="section-title">Jak to działa?</h2>
         <div class="steps">
           <div class="step step--first">
-            <img src="/images/phone.svg" class="step__phone-image" width="324" height="600" alt="Phone image" />
-            <img src="/images/steps_arrow_1.svg" class="step__arrow" width="99" height="106" alt="Step 1 arrow" />
+            <img src="./images/phone.svg" class="step__phone-image" width="324" height="600" alt="Phone image" />
+            <img src="./images/steps_arrow_1.svg" class="step__arrow" width="99" height="106" alt="Step 1 arrow" />
             <div class="step-description">
               <p class="step-description__title">
                 <span class="step-description__title step-description__title--number">
@@ -153,12 +153,12 @@
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
               </p>
             </div>
-            <img src="/images/phone.svg" class="step__phone-image" width="324" height="600" alt="Phone image" />
-            <img src="/images/steps_arrow_2.svg" class="step__arrow" width="99" height="106" alt="Step 2 arrow" />
+            <img src="./images/phone.svg" class="step__phone-image" width="324" height="600" alt="Phone image" />
+            <img src="./images/steps_arrow_2.svg" class="step__arrow" width="99" height="106" alt="Step 2 arrow" />
           </div>
           <div class="step step--third">
-            <img src="/images/phone.svg" class="step__phone-image" width="324" height="600" alt="Phone image" />
-            <img src="/images/steps_arrow_3.svg" class="step__arrow" width="152" height="119" alt="Step 3 arrow" />
+            <img src="./images/phone.svg" class="step__phone-image" width="324" height="600" alt="Phone image" />
+            <img src="./images/steps_arrow_3.svg" class="step__arrow" width="152" height="119" alt="Step 3 arrow" />
             <div class="step-description">
               <p class="step-description__title">
                 <span class="step-description__title step-description__title--number">
@@ -172,7 +172,7 @@
             </div>
           </div>
           <div class="step step--fourth">
-            <img src="/images/phone.svg" class="step__phone-image" width="324" height="600" alt="Phone image" />
+            <img src="./images/phone.svg" class="step__phone-image" width="324" height="600" alt="Phone image" />
             <div class="step-description">
               <p class="step-description__title">
                 <span class="step-description__title step-description__title--number">
@@ -203,7 +203,7 @@
         </h2>
 
         <div class="pricing-wrapper">
-          <img class="pricing-wrapper__phone-image" src="/images/pricing_phone.svg" width="113" height="218" alt="Pricing phone image" />
+          <img class=".pricing-wrapper__phone-image" src="/images/pricing_phone.svg" width="113" height="218" alt="Pricing phone image" />
           <h3 class="pricing-wrapper__title">
             <span class="pricing-wrapper__subtitle">
               Lorem ipsum
