Fix images urls

--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
         </h2>
 
         <div class="pricing-wrapper">
-          <img class=".pricing-wrapper__phone-image" src="/images/pricing_phone.svg" width="113" height="218" alt="Pricing phone image" />
+          <img src="/images/pricing_phone.svg" class="pricing-wrapper__phone-image" width="113" height="218" alt="Pricing phone image" />
           <h3 class="pricing-wrapper__title">
             <span class="pricing-wrapper__subtitle">
               Lorem ipsum
