Fix images urls

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         </div>
 
         <div class="intro-image">
-          <img class="intro-image__image" src="/images/intro_phone.png" width="602" height="886" alt="Intro phone and hand image" />
+          <img src="./images/intro_phone.png" class="intro-image__image" width="602" height="886" alt="Intro phone and hand image" />
         </div>
       </div>
       <div class="curve-bg">
@@ -203,7 +203,7 @@
         </h2>
 
         <div class="pricing-wrapper">
-          <img src="/images/pricing_phone.svg" class="pricing-wrapper__phone-image" width="113" height="218" alt="Pricing phone image" />
+          <img src="./images/pricing_phone.svg" class="pricing-wrapper__phone-image" width="113" height="218" alt="Pricing phone image" />
           <h3 class="pricing-wrapper__title">
             <span class="pricing-wrapper__subtitle">
               Lorem ipsum
