Scroll to section

--- a/index.html
+++ b/index.html
@@ -20,17 +20,17 @@
 
         <ul class="header-nav">
           <li class="header-nav__item">
-            <a href="#" class="header-nav__link">
+            <a href="#intro" class="header-nav__link scroll-link">
               Start
             </a>
           </li>
           <li class="header-nav__item">
-            <a href="#" class="header-nav__link">
+            <a href="#how-it-works" class="header-nav__link scroll-link">
               Jak to działa?
             </a>
           </li>
           <li class="header-nav__item">
-            <a href="#" class="header-nav__link">
+            <a href="#pricing" class="header-nav__link scroll-link">
               Cennik
             </a>
           </li>
@@ -64,17 +64,17 @@
           </div>
           <ul class="header-nav">
             <li class="header-nav__item">
-              <a href="#" class="header-nav__link">
+              <a href="#intro" class="header-nav__link scroll-link">
                 Start
               </a>
             </li>
             <li class="header-nav__item">
-              <a href="#" class="header-nav__link">
+              <a href="#how-it-works" class="header-nav__link scroll-link">
                 Jak to działa?
               </a>
             </li>
             <li class="header-nav__item">
-              <a href="#" class="header-nav__link">
+              <a href="#pricing" class="header-nav__link scroll-link">
                 Cennik
               </a>
             </li>
@@ -95,7 +95,7 @@
       </div>
     </header>
 
-    <section class="intro-section">
+    <section id="intro" class="intro-section">
       <div class="container">
         <div class="intro-description">
           <h1 class="intro-description__title section-title">Poznaj Lorem Ipsum!</h1>
@@ -122,7 +122,7 @@
       </div>
     </section>
 
-    <section class="hiw-section">
+    <section id="how-it-works" class="hiw-section">
       <div class="container">
         <h2 class="section-title">Jak to działa?</h2>
         <div class="steps">
@@ -193,7 +193,7 @@
       
     </section>
 
-    <section class="pricing-section">
+    <section id="pricing" class="pricing-section">
       <div class="container">
         <h2 class="section-title">
           Cennik
